Anfang Übung 2, Anpassungen Übung 1

--- a/index.html
+++ b/index.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index-html</title>
 </head>
 <body>
-    <h1>Überschrift</h1>
+    <header>    
+        <h1>Webtechnologien 2023/24 HTW FIW</h1>
+    </header>
+    <section>
+        <h2>Links zu den Übungen</h2>
+        <ol>
+            <li>
+                <p>Übung 1</p>
+                <ul>
+                    <li>                    
+                        <a href="./Uebung1/uebung1.html">Startseite</a>
+                    </li> 
+                    <li>
+                        <a href="./Uebung1/NN/a-g.html">A-G</a>
+                    </li>
+                    <li>
+                        <a href="./Uebung1/NN/h-l.html">H-L</a>
+                    </li>
+                    <li>
+                        <a href="./Uebung1/NN/m-r.html">M-R</a>
+                    </li>
+                    <li>
+                        <a href="./Uebung1/NN/s-z.html">S-Z</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <p>Übung 2</p>
+                <ul>
+                    <li>                    
+                        <a href="./Uebung2/uebung2.html">Startseite</a>
+                    </li> 
+                    <li>
+                        <a href="./Uebung2/NN/a-g.html">A-G</a>
+                    </li>
+                    <li>
+                        <a href="./Uebung2/NN/h-l.html">H-L</a>
+                    </li>
+                    <li>
+                        <a href="./Uebung2/NN/m-r.html">M-R</a>
+                    </li>
+                    <li>
+                        <a href="./Uebung2/NN/s-z.html">S-Z</a>
+                    </li>
+                </ul>
+            </li>
+        </ol>
+    </section>
+    <footer>
+        <p style="font-size: small; text-align: center;">Elise Schw.</p>
+    </footer>
 </body>
 </html>
