--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>Übung 1</p>
                 <ul>
                     <li>                    
-                        <a href="./Uebung1/uebung1.html">Startseite</a>
+                        <a href="./Uebung1/uebung1.html">Alle</a>
                     </li> 
                     <li>
                         <a href="./Uebung1/NN/a-g.html">A-G</a>
@@ -36,7 +36,7 @@
                 <p>Übung 2</p>
                 <ul>
                     <li>                    
-                        <a href="./Uebung2/uebung2.html">Startseite</a>
+                        <a href="./Uebung2/uebung2.html">Alle</a>
                     </li> 
                     <li>
                         <a href="./Uebung2/NN/a-g.html">A-G</a>
