--- a/Uebung2/NN/h-l.html
+++ b/Uebung2/NN/h-l.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Übung 2</title>
+    <link rel="stylesheet" href="../styles/mystyles.css">
 </head>
 <body>
     <header>
