Übung 3 und index aktualisiert

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                     <li>
                         <a href="./Uebung2/NN/s-z.html">S-Z</a>
                     </li>
+                    <li><a href="./Uebung2/styles/mystyles.css">CSS</a></li>
+                </ul>
+            </li>
+            <li>
+                <p>Übung 3</p>
+                <ul>
+                    <li><a href="./Uebung3/uebung3.html">Städte</a></li>
+                    <li><a href="./Uebung3/styles/mystyles.css">CSS</a></li>
                 </ul>
             </li>
         </ol>
