--- a/Uebung3/uebung3.html
+++ b/Uebung3/uebung3.html
@@ -111,6 +111,9 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>        
+        <a href="../index.html">Startseite</a>
+        <p>Elise Schw.</p>
+    </footer>
 </body>
 </html>
