Übung 5 und Anpassungen Übung 4

--- a/Uebung4/uebung4.html
+++ b/Uebung4/uebung4.html
@@ -81,5 +81,10 @@
             }
         </script>
     </form>
+    <footer style="background-color: rgb(251, 244, 244); color: black; text-align: center;
+        font-size: smaller; padding-top: 10px; padding-bottom: 1px; margin-top: 15px; position: absolute; bottom: 0; width: 100%;">
+        <a href="../index.html">Startseite</a>
+        <p>Elise Schw.</p>
+    </footer>
 </body>
 </html>
