--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                     <li><a href="./Uebung4/uebung4.html">Formular mit Bootstrap und JS</a></li>
                 </ul>
             </li>
+            <li>
+                <p>Übung 5</p>
+                <ul>
+                    <li><a href="./Uebung5/uebung5.html">Städte</a></li>
+                </ul>
+            </li>
         </ol>
     </section>
     <footer>
