Übung 6 und Ordner angepasst

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                     <li><a href="./Uebung5/uebung5.html">Städte</a></li>
                 </ul>
             </li>
+            <li>
+                <p>Übung 6</p>
+                <ul>
+                </ul>
+            </li>
         </ol>
     </section>
     <footer>
