Übung 6 und Ordner angepasst und index

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li>
                 <p>Übung 6</p>
                 <ul>
+                    <li><a href="./Uebung6/index.html">Übung 6</a></li>
                 </ul>
             </li>
         </ol>
