--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
             <li>
                 <p>Übung 6</p>
                 <ul>
-                    <li><a href="./Uebung6/index.html">Übung 6</a></li>
+                    <li><a href="./Uebung6/index.html">Angular - Komponenten</a></li>
                 </ul>
+            </li>
+            <li>
+                <p>Übung 7</p>
+                <ul><li><a href="./Uebung7/index.html">Tabelle und Filter</a></li></ul>
             </li>
         </ol>
     </section>
