--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                 <p>Übung 7</p>
                 <ul><li><a href="./Uebung7/index.html">Tabelle und Filter</a></li></ul>
             </li>
+            <li>
+                <p>Übung 8</p>
+                <ul><li><a href="">REST-API mit PostgreSQL</a></li></ul>
+            </li>
         </ol>
     </section>
     <footer>
