--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </li>
             <li>
                 <p>Übung 8</p>
-                <ul><li><a href="">REST-API mit PostgreSQL</a></li></ul>
+                <ul><li><a href="./Uebung8/users/">REST-API mit PostgreSQL</a></li></ul>
             </li>
         </ol>
     </section>
