--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                 <p>Übung 8</p>
                 <ul><li><a href="./Uebung8/users/">REST-API mit PostgreSQL</a></li></ul>
             </li>
+            <li>
+                <p>Übung 8a</p>
+                <ul><li><a href="./Uebung8a/usersh/">REST-API mit PostgreSQL mit Login und Passworthash</a></li></ul>
+            </li>
         </ol>
     </section>
     <footer>
