--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                 <p>Übung 8a</p>
                 <ul><li><a href="./Uebung8a/usersh/">REST-API mit PostgreSQL mit Login und Passworthash</a></li></ul>
             </li>
+            <li>
+                <p>Übung 9</p>
+                <ul><li><a href="./Uebung9/index.html">Angular, Material Design und Formulare</a></li></ul>
+            </li>
         </ol>
     </section>
     <footer>
